[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Ship.gd" type="Script" id=1]
[ext_resource path="res://Assets/Ships/black_ship.png" type="Texture" id=2]
[ext_resource path="res://Assets/Effects/yellow_glow_circle.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Circle"
length = 1.8
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.149653, 0.149653 ), Vector2( 0.2, 0.2 ), Vector2( 0.149653, 0.149653 ), Vector2( 0.2, 0.2 ), Vector2( 0.149653, 0.149653 ), Vector2( 0.2, 0.2 ), Vector2( 0.15, 0.15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.854902, 0.854902, 0.745098, 1 ), Color( 1, 0.909804, 0.321569, 1 ), Color( 0.854902, 0.854902, 0.745098, 1 ), Color( 1, 0.909804, 0.321569, 1 ), Color( 0.854902, 0.854902, 0.745098, 1 ), Color( 1, 0.909804, 0.321569, 1 ), Color( 0.854902, 0.854902, 0.745098, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.149653, 0.149653 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.905882, 0.870588, 0.635294, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.0
height = 50.0

[node name="Ship" type="KinematicBody2D"]
position = Vector2( 206, 131 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4

[node name="EffectPosition" type="Position2D" parent="."]

[node name="BigExplosionTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="YellowGlowCircle" type="Sprite" parent="."]
modulate = Color( 0.905882, 0.870588, 0.635294, 1 )
position = Vector2( -1, 1 )
scale = Vector2( 0.149653, 0.149653 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="YellowGlowCircle"]
anims/Circle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="timeout" from="BigExplosionTimer" to="." method="_on_BigExplostionTimer_timeout"]
